# contextpress

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  try_compress.py
.github/workflows/: ci.yml
contextpress/: __init__.py  _bootstrap.py  compression.py  core.py  models.py  normalizer.py  pipeline.py  profiles.py  stats.py
contextpress/llm/: __init__.py  _helpers.py  adapters.py  base.py
contextpress/strategies/: __init__.py  base.py  budget.py  filler.py  recency.py  repetition.py  resolution.py
examples/: llm_tier_ollama.py  llm_tier_openai.py
tests/: test_budget.py  test_filler.py  test_llm_helpers.py  test_models.py  test_normalizer.py  test_pipeline.py  test_recency.py  test_repetition.py  test_resolution.py  test_stats.py
